[package]
name = "libjpeg-sys"
description = "Builds and links libjpeg(-turbo)"
version = "0.1.0"
edition = "2021"
license = "MIT"
links = "libjpeg"

[dependencies]

[build-dependencies]
cc = { version = "1.0.73", features = ["parallel"] }
itoa = { version = "1.0.4" }

[features]
default = ["build"] 

simd = []
clone = []
build = ["clone", "simd"]
no-build = []
