[package]
name = "libjpeg-sys"
description = "Builds and links libjpeg(-turbo)"
version = "0.1.0"
edition = "2021"
license = "MIT"
links = "jpeg"

[lib]
name = "jpeg"
crate-type = ["staticlib", "cdylib", "rlib"]
links = "jpeg"

[build-dependencies]
cc = { version = "1.0.73", features = ["parallel"] }
itoa = { version = "1.0.4" }
# sorse = { version = "0.1.0", registry = "ktra" }
sorse = { path = "../sorse/" }

[features]
default = ["build", "simd"] 
jpeg80_abi = ["jpeg70_abi"]
jpeg70_abi = ["arith_dec", "arith_enc"]
arith_enc = []
arith_dec = []
jpegtran = []
simd = []
build = []
