[package]
name = "libjpeg-sys"
description = "Builds and links libjpeg(-turbo)"
version = "0.1.0"
edition = "2021"
license = "MIT"
links = "jpeg"

[lib]
name = "jpeg"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0.75"
bindgen = "0.69.1"
cc = { version = "1.0.73", features = ["parallel"] }
nasm-rs = { version = "0.2.5", features = ["parallel"] }
# sorse = { version = "0.1.0", registry = "ktra" }
sorse = { path = "../sorse/" }

[features]
default = ["simd"] 
bindgen = []
jpeg80_abi = ["jpeg70_abi"]
jpeg70_abi = ["arith_dec", "arith_enc"]
arith_enc = []
arith_dec = []
jpegtran = []
simd = []
c_lossless = []
d_lossless = []
